--- a/Changes
+++ b/Changes
@@ -43,6 +43,7 @@
   [Incompatible Changes]
     * Rename the pointable method in the Point class to the has_interfaces method.
     * Rename the pointable method in the Pointable class to the has_interfaces method.
+    * Rename Pointable class to the Point::Interface class.
     
 0.9650 2022-09-02
   [Incompatible Changes]
