--- a/Changes
+++ b/Changes
@@ -22,6 +22,8 @@
       The field "port" is not defined in the class "Sys::Socket::Sockaddr::In" or the super classes
       [After]
       The field "port" is not defined in the class "Sys::Socket::Sockaddr::In" or its super classes
+  [Bug Fix With Incompatible Changes]
+    * Fix the bug that the method is defined by the different legnth of the arguments of the method in the interface.
     
 0.9653 2022-09-27
   [New Features]
