--- a/Changes
+++ b/Changes
@@ -23,8 +23,9 @@
       [After]
       The field "port" is not defined in the class "Sys::Socket::Sockaddr::In" or its super classes
   [Bug Fix With Incompatible Changes]
-    * Fix the bug that the method is defined by the different legnth of the arguments of the method in the interface.
-    * Fix the bug that the method is defined as a class method although the method is defined in the interface.
+    * Fixed the bug that the method could be defined by the different legnth of the arguments of the method in the interface.
+    * Fixed the bug that the method could be defined as a class method although the method is defined in the interface.
+    * Fixed the bug that the differnet type of the argument of the method could be defined.
     
 0.9653 2022-09-27
   [New Features]
