--- a/Changes
+++ b/Changes
@@ -1,3 +1,27 @@
+0.9655 2022-10-12
+  [Bug Fix With Incompatible Changes]
+    * The return types of the following methods in the Time::Info class. This change will probably not break existing code.
+      [Before]
+        method set_tm_sec : int ($sec : int);
+        method set_tm_min : int ($min : int);
+        method set_tm_hour : int ($hour : int);
+        method set_tm_mday : int ($mday : int);
+        method set_tm_mon : int ($mon : int);
+        method set_tm_year : int ($year : int);
+        method set_tm_wday : int ($wday : int);
+        method set_tm_yday : int ($yday : int);
+        method set_tm_isdst : int ($isdst : int);
+      [After]
+        method set_tm_sec : void ($tm_sec : int);
+        method set_tm_min : void ($tm_min : int);
+        method set_tm_hour : void ($tm_hour : int);
+        method set_tm_mday : void ($tm_mday : int);
+        method set_tm_mon : void ($tm_mon : int);
+        method set_tm_year : void ($tm_year : int);
+        method set_tm_wday : void ($tm_wday : int);
+        method set_tm_yday : void ($tm_yday : int);
+        method set_tm_isdst : void ($tm_isdst : int);
+    
 0.9654 2022-10-05
   [New Features]
     * Added the replace_chars method to the Fn class.
