--- a/Changes
+++ b/Changes
@@ -1,4 +1,4 @@
-0.9657 2022-10-20
+0.9657 2022-10-21
   [Changes]
     * Changed a warning message when an exception is thrown in the DESTROY method.
       [Before]
@@ -6,6 +6,14 @@
       [After]
       (An exception thrown in the DESTROY method is converted to a warning)...
     * The Hash class uses siphash-1-3 as the hash function instead of MurmurHash.
+  [New Features]
+    * Added the following native APIs.
+    
+      int32_t (*get_pointer_no_need_free)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
+      void (*set_pointer_no_need_free)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, int32_t flag);
+      int32_t (*get_pointer_length)(SPVM_ENV* env, SPVM_VALUE* stack, void* object);
+      void (*set_pointer_length)(SPVM_ENV* env, SPVM_VALUE* stack, void* object, int32_t length);
+
 0.9656 2022-10-19
   [New Features]
     * Added the Scope::Guard class.
