Added the say operator.
  [New Features]
    * Added the say operator.

--- a/Changes
+++ b/Changes
@@ -1,3 +1,7 @@
+0.9658 2022-10-21
+  [New Features]
+    * Added the say operator.
+
 0.9657 2022-10-21
   [Changes]
     * Changed a warning message when an exception is thrown in the DESTROY method.
