--- a/Changes
+++ b/Changes
@@ -3,6 +3,9 @@
     * Added the say operator.
   [Test Improvement]
     * Added the test numbers to the test directories.
+    * Added the test of the type assignability.
+  [Internal Changes with No Effects]
+    * Use SPVM_TYPE_equals more.
 0.9657 2022-10-21
   [Changes]
     * Changed a warning message when an exception is thrown in the DESTROY method.
