Fixed the bug that a compilation error occured when (string[]) type cast of string[] type.
  [Bug Fix]
    * Fixed the bug that a compilation error occured when (string[]) type cast of string[] type.

--- a/Changes
+++ b/Changes
@@ -6,6 +6,8 @@
     * Added the test of the type assignability.
   [Internal Changes with No Effects]
     * Use SPVM_TYPE_equals more.
+  [Bug Fix]
+    * Fixed the bug that a compilation error occured when (string[]) type cast of string[] type.
 0.9657 2022-10-21
   [Changes]
     * Changed a warning message when an exception is thrown in the DESTROY method.
