The reference type can be used in the == and != operator and etc.
  [Changes]
    * The reference type can be used in the == and != operator.
    * The reference type can be used in bool conversion such as "if ($ref) { }"

--- a/Changes
+++ b/Changes
@@ -4,6 +4,9 @@
   [Internal Changes without Effects]
     * Renamed SPVM_OPCODE_C_ID_INIT_UNDEF to SPVM_OPCODE_C_ID_INIT_OBJECT
     * Removed SPVM_OPCODE_C_ID_MOVE_UNDEF because it is the same as SPVM_OPCODE_C_ID_INIT_OBJECT.
+  [Changes]
+    * The reference type can be used in the == and != operator.
+    * The reference type can be used in bool conversion such as "if ($ref) { }"
     
 0.9658 2022-10-26
   [New Features]
