--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
   [Internal Changes without Effects]
     * Renamed SPVM_OPCODE_C_ID_INIT_UNDEF to SPVM_OPCODE_C_ID_INIT_OBJECT
     * Removed SPVM_OPCODE_C_ID_MOVE_UNDEF because it is the same as SPVM_OPCODE_C_ID_INIT_OBJECT.
+    * Renamed SPVM_OPCODE_C_ID_TYPE_CONVERSION_CONDITIONAL_xxx to SPVM_OPCODE_C_ID_BOOL_CONVERSION_xxx
   [Changes]
     * The reference type can be used in the == and != operator.
     * The reference type can be used in bool conversion such as "if ($ref) { }"
